--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
           pip install -r requirements.txt
       - name: Run Tests
         run: pytest test_main.py
-
+      - name: Debug File Structure
+        run: ls -R
